--- a/src/modules/menu/menu.module.scss
+++ b/src/modules/menu/menu.module.scss
@@ -15,6 +15,12 @@
       color: grey;
       text-decoration: none;
     }
+
+    &.active {
+      a {
+        color: rgb(96 96 96);
+      }
+    }
   }
 
   .right {
