--- a/src/modules/projects/projects.module.scss
+++ b/src/modules/projects/projects.module.scss
@@ -5,3 +5,59 @@
   width: 100vw;
   height: 100vh;
 }
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 1rem 5rem 5rem 5rem;
+  margin-top: 2rem;
+  grid-gap: 1rem;
+  overflow: auto;
+  height: 100%;
+  padding-bottom: 10rem;
+
+  .footer {
+    width: 100%;
+    height: 10rem;
+  }
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: grey;
+  box-shadow: 0px 0px 7px 1px rgb(206, 205, 205);
+  border-radius: 0.3rem;
+  padding: 1rem;
+  transition: box-shadow 0.3s;
+  transition-timing-function: ease-in-out;
+
+  &:hover {
+    box-shadow: 0px 0px 15px 2px rgb(206, 205, 205);
+  }
+
+  .summary {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .links {
+    display: flex;
+
+    a {
+      margin-right: 1rem;
+    }
+  }
+
+  .tech {
+    display: flex;
+
+    .techItem {
+      margin-right: 1rem;
+      color: rgb(94, 78, 78);
+    }
+  }
+}
