--- a/src/modules/projects/projects.module.scss
+++ b/src/modules/projects/projects.module.scss
@@ -4,6 +4,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  background: radial-gradient(50% 50% at 50% 50%, rgb(32 32 32) 20%, rgb(19, 18, 18) 100%);
 }
 
 .projects {
@@ -27,7 +28,7 @@
   flex-direction: column;
   justify-content: space-between;
   color: grey;
-  box-shadow: 0px 0px 7px 1px rgb(206, 205, 205);
+  box-shadow: 0px 0px 7px 1px rgb(116 116 116);
   border-radius: 0.3rem;
   padding: 1rem;
   transition: box-shadow 0.3s;
