--- a/src/modules/menu/menu.module.scss
+++ b/src/modules/menu/menu.module.scss
@@ -8,18 +8,28 @@
   align-items: center;
 
   .item {
-    font-size: 2rem;
-    margin-right: 2rem;
+    font-size: 1.7rem;
+    margin-right: 1rem;
+    padding: 0.5rem 0.8rem;
+    transition: box-shadow 0.3s;
+    transition-timing-function: ease-in-out;
+    border-radius: 0.5rem;
 
     a {
-      color: grey;
+      color: rgb(96 96 96);
       text-decoration: none;
     }
 
     &.active {
+      box-shadow: 0px 0px 7px 1px rgb(116 116 116);
+
       a {
-        color: rgb(96 96 96);
+        color: grey;
       }
+    }
+
+    &:hover {
+      box-shadow: 0px 0px 7px 1px rgb(206, 205, 205);
     }
   }
 
