--- a/src/modules/home/home.module.scss
+++ b/src/modules/home/home.module.scss
@@ -4,4 +4,20 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  background: radial-gradient(50% 50% at 50% 50%, rgb(32 32 32) 20%, rgb(19, 18, 18) 100%);
+}
+
+.intro {
+  // display: grid;
+  // grid-template-columns: repeat(2, 1fr);
+  margin: 1rem 5rem 5rem 5rem;
+  margin-top: 2rem;
+  // grid-gap: 1rem;
+  overflow: auto;
+  // height: 100%;
+  padding-bottom: 10rem;
+
+  box-shadow: 0px 0px 7px 1px rgb(116 116 116);
+  border-radius: 0.3rem;
+  padding: 1rem;
 }
