--- a/src/modules/home/home.module.scss
+++ b/src/modules/home/home.module.scss
@@ -8,6 +8,7 @@
 }
 
 .intro {
+  text-align: center;
   // display: grid;
   // grid-template-columns: repeat(2, 1fr);
   margin: 1rem 5rem 5rem 5rem;
