--- a/src/modules/home/home.module.scss
+++ b/src/modules/home/home.module.scss
@@ -5,13 +5,15 @@
   width: 100vw;
   height: 100vh;
   background: radial-gradient(50% 50% at 50% 50%, rgb(32 32 32) 20%, rgb(19, 18, 18) 100%);
+  overflow: auto;
 }
 
 .intro {
+  position: relative;
   text-align: center;
   // display: grid;
   // grid-template-columns: repeat(2, 1fr);
-  margin: 1rem 5rem 5rem 5rem;
+  margin: 0rem 5rem 2rem 5rem;
   margin-top: 2rem;
   // grid-gap: 1rem;
   overflow: auto;
@@ -40,6 +42,23 @@
     // }
     50% {
       color: #e63d09;
+    }
+  }
+
+  .contact {
+    text-align: center;
+    // position: absolute;
+    bottom: 0rem;
+    // left: 50%;
+    // left: calc(50% - 13rem);
+    // display: flex;
+    // flex-direction: column;
+    width: 100%;
+    // justify-content: space-between;
+    color: grey;
+
+    a {
+      color: grey;
     }
   }
 }
